<resources>
    <string name="app_name">Хочу помочь</string>
    <string name="loading">Загрузка</string>
    <string name="profile">Профиль</string>
    <string name="edit">Изменить</string>
    <string name="full_name">Константин Денисов</string>
    <string name="birthday_data_1">Дата рождения</string>
    <string name="birthday_data">01 февраля 1980</string>
    <string name="profession">Хирургия, травмотология</string>
    <string name="sfera">Сфера деятельности</string>
    <string name="push">Получать push-уведомления</string>
    <string name="your_friend">Ваши друзья</string>
    <string name="name_1">Дмитрий Валерьевич</string>
    <string name="name_2">Евгений Александров</string>
    <string name="name_3">Виктор Кузнецов</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="news">Новости</string>
    <string name="search">Поиск</string>
    <string name="help">Помочь</string>
    <string name="history">История</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="take_photo">Сделать снимок</string>
    <string name="delete">Удалить</string>
    <string name="choose_category">Выберите категорию помощи</string>
    <string name="children">Дети</string>
    <string name="adult">Взрослые</string>
    <string name="elderly">Пожилые</string>
    <string name="animals">Животные</string>
    <string name="events">Мероприятия</string>
    <string name="search_hint">Введите название организации</string>
    <string name="search_result_1">Благотворительный фонд Алины Кабаевой</string>
    <string name="search_result_2">Во имя жизни</string>
    <string name="search_result_3">Благотворительный фонд Потанина</string>
    <string name="search_result_4">Детские домики</string>
    <string name="search_result_5">Мозаика счастья</string>
    <string name="key_search">Ключевые слова:</string>
    <string name="search_result">Результаты поиска:</string>
    <string name="search_events">По мероприятиям</string>
    <string name="search_nko">По НКО</string>
    <string name="filter">Фильтр</string>
    <string name="help_categories_title">Категории помощи</string>
    <string name="share">Поделиться</string>
</resources>