<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_news"
        android:icon="@drawable/ic_news"
        android:title="@string/news"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_help"
        android:icon="@drawable/ic_heart"
        android:title="@string/help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

</menu>