<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey_two">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_filter"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/leaf"
            app:layout_collapseMode="pin"
            app:menu="@menu/menu_filter_news"
            app:navigationIcon="@drawable/ic_arrow_back">

            <TextView
                android:id="@+id/tv_title_nes"
                style="@style/TextStyle.BlueGrey.21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/filter"
                android:textColor="@color/white"
                android:textFontWeight="800" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_help_categories"
        style="@style/TextStyle.Black70.14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="start"
        android:text="@string/help_categories_title"
        app:layout_constraintBottom_toTopOf="@id/switch_children"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_filter" />


    <Switch
        android:id="@+id/switch_children"
        style="@style/TextStyle.Black87.16.NoCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:checked="false"
        android:paddingStart="20dp"
        android:paddingTop="18dp"
        android:paddingEnd="20dp"
        android:paddingBottom="18dp"
        android:text="@string/children"
        android:theme="@style/MySwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_help_categories"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <Switch
        android:id="@+id/switch_adult"
        style="@style/TextStyle.Black87.16.NoCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.2dp"
        android:background="@color/white"
        android:checked="false"
        android:paddingStart="20dp"
        android:paddingTop="18dp"
        android:paddingEnd="20dp"
        android:paddingBottom="18dp"
        android:text="@string/adult"
        android:theme="@style/MySwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_children"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <Switch
        android:id="@+id/switch_elderly"
        style="@style/TextStyle.Black87.16.NoCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.2dp"
        android:background="@color/white"
        android:checked="false"
        android:paddingStart="20dp"
        android:paddingTop="18dp"
        android:paddingEnd="20dp"
        android:paddingBottom="18dp"
        android:text="@string/elderly"
        android:theme="@style/MySwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_adult"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <Switch
        android:id="@+id/switch_animals"
        style="@style/TextStyle.Black87.16.NoCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.2dp"
        android:background="@color/white"
        android:checked="false"
        android:paddingStart="20dp"
        android:paddingTop="18dp"
        android:paddingEnd="20dp"
        android:paddingBottom="18dp"
        android:text="@string/animals"
        android:theme="@style/MySwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_elderly"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <Switch
        android:id="@+id/switch_events"
        style="@style/TextStyle.Black87.16.NoCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.2dp"
        android:background="@color/white"
        android:checked="false"
        android:paddingStart="20dp"
        android:paddingTop="18dp"
        android:paddingEnd="20dp"
        android:paddingBottom="18dp"
        android:text="@string/events"
        android:theme="@style/MySwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_animals"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnv_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom_nav" />


</androidx.constraintlayout.widget.ConstraintLayout>