<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsingtoolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

                    <ImageView
                        android:id="@+id/iv_man"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="?attr/actionBarSize"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image_man"
                        app:layout_collapseMode="parallax"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/toolbar" />

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@color/leaf"
                        app:layout_collapseMode="pin"
                        app:menu="@menu/menu_edit">

                        <TextView
                            android:id="@+id/tv_profile"
                            style="@style/TextStyle6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="@string/profile"
                            android:textColor="@color/white"
                            android:textFontWeight="800" />
                    </androidx.appcompat.widget.Toolbar>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextStyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_start"
                android:layout_marginTop="@dimen/dimen_start"
                android:text="@string/full_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_bar" />

            <TextView
                android:id="@+id/tv_bd_top"
                style="@style/TextStyle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_start"
                android:layout_marginTop="16dp"
                android:text="@string/birthday_data_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_bd"
                style="@style/TextStyle7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_start"
                android:text="@string/birthday_data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bd_top" />

            <TextView
                android:id="@+id/tv_sfera"
                style="@style/TextStyle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_start"
                android:layout_marginTop="10dp"
                android:text="@string/sfera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bd" />

            <TextView
                android:id="@+id/tv_profession"
                style="@style/TextStyle7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_start"
                android:text="@string/profession"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sfera" />

            <Switch
                android:id="@+id/switcher"
                style="@style/TextStyle7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_start"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="@dimen/dimen_start"
                android:checked="true"
                android:text="@string/push"
                android:theme="@style/MySwitch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_profession"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <ImageView
                android:id="@+id/separator1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:src="@drawable/separator"
                app:layout_constraintTop_toBottomOf="@id/switcher" />

            <TextView
                android:id="@+id/tv_your_friends"
                style="@style/TextStyle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_start"
                android:layout_marginTop="10dp"
                android:text="@string/your_friend"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator1" />

            <ImageView
                android:id="@+id/avatar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_start"
                android:layout_marginTop="16dp"
                android:src="@drawable/avatar_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_your_friends" />

            <TextView
                android:id="@+id/tv_name_1"
                style="@style/TextStyle7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_start"
                android:text="@string/name_1"
                app:layout_constraintBottom_toBottomOf="@id/avatar1"
                app:layout_constraintStart_toEndOf="@id/avatar1"
                app:layout_constraintTop_toTopOf="@id/avatar1" />

            <ImageView
                android:id="@+id/avatar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_start"
                android:layout_marginTop="10dp"
                android:src="@drawable/avatar_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/avatar1" />

            <TextView
                android:id="@+id/tv_name_2"
                style="@style/TextStyle7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_start"
                android:text="@string/name_2"
                app:layout_constraintBottom_toBottomOf="@id/avatar2"
                app:layout_constraintStart_toEndOf="@id/avatar2"
                app:layout_constraintTop_toTopOf="@id/avatar2" />

            <ImageView
                android:id="@+id/avatar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_start"
                android:layout_marginTop="10dp"
                android:src="@drawable/avatar_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/avatar2" />

            <TextView
                android:id="@+id/tv_name_3"
                style="@style/TextStyle7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_start"
                android:text="@string/name_3"
                app:layout_constraintBottom_toBottomOf="@id/avatar3"
                app:layout_constraintStart_toEndOf="@id/avatar3"
                app:layout_constraintTop_toTopOf="@id/avatar3" />

            <ImageView
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_start"
                android:src="@drawable/separator"
                app:layout_constraintTop_toBottomOf="@id/avatar3" />

            <Button
                android:id="@+id/exit"
                style="@style/TextStyle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_start"
                android:background="@color/leaf"
                android:gravity="center"
                android:text="@string/exit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/navigation_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/separator2" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/navigation_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:labelVisibilityMode="labeled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/exit"
                app:menu="@menu/menu_bottom_nav" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>